feat: historical data charts

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -12,6 +12,19 @@
   --secondary-color: var(--secondaryColor500);
   --main-transition: 0.2s ease-in-out;
 
+  --font-size-xs: 12px;
+  --font-size-sm: 14px;
+  --font-size-base: 16px;
+  --font-size-ml: 18px;
+  --font-size-lg: 24px;
+  --font-size-xl: 32px;
+  --font-size-xxl: 42px;
+  --font-size-xxxl: 60px;
+
+  --font-weight-light: 400;
+  --font-weight-medium: 500;
+  --font-weight-bold: 700;
+
 
   // EXTENDED PRIMARY COLOR PALETTE
   --primaryColor900: #082338;
