--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -6,75 +6,75 @@ html {
 }
 
 body {
-  font-weight: 400;
-  line-height: 25px;
+  font-weight: var(--font-weight-light);
+  line-height: 1.2;
   color: var(--main-text-color);
   font-family: var(--primary-font);
   -webkit-font-smoothing: antialiased;
-  font-size: 16px;
+  font-size: var(--font-size-base);
 }
 
 h1 {
-  font-size: 60px;
-  line-height: 72px;
-  font-weight: bold;
+  font-size: var(--font-size-xxxl);
+  line-height: 1.2;
+  font-weight: var(--font-weight-bold);
   font-family: var(--secondary-font);
   color: var(--primary-color);
 }
 
 h2 {
-  font-size: 42px;
-  line-height: 51px;
-  font-weight: 400;
+  font-size: var(--font-size-xxl);
+  line-height: 1.2;
+  font-weight: var(--font-weight-light);
   color: var(--primary-color);
   font-family: var(--secondary-font);
   margin-bottom: 20px;
 }
 
 h3 {
-  font-size: 32px;
-  line-height: 39px;
-  font-weight: 500;
+  font-size: var(--font-size-xl);
+  line-height: 1.2;
+  font-weight: var(--font-weight-medium);
   font-family: var(--secondary-font);
   color: var(--main-text-color);
   margin-bottom: 36px;
 }
 
 h4 {
-  font-size: 24px;
-  line-height: 30px;
-  font-weight: bold;
+  font-size: var(--font-size-lg);
+  line-height: 1.2;
+  font-weight: var(--font-weight-bold);
   margin-bottom: 20px;
   font-family: var(--secondary-font);
   color: var(--main-text-color);
 }
 
 h5 {
-  font-size: 18px;
-  font-weight: bold;
-  line-height: 30px;
+  font-size: var(--font-size-ml);
+  font-weight: var(--font-weight-bold);
+  line-height: 1.2;
   color: var(--main-text-color);
   margin-bottom: 20px;
   font-family: var(--secondary-font);
 }
 
 p {
-  font-size: 16px;
+  font-size: var(--font-size-base);
   color: var(--main-text-color);
-  line-height: 27px;
+  line-height: 1.2;
 }
 
 p.small {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
+  font-size: var(--font-size-sm);
+  font-weight: var(--font-weight-light);
+  line-height: 1.2;
   font-family: var(--primary-font);
 }
 
 small {
-  font-size: 14px;
+  font-size: var(--font-size-sm);
   color: var(--main-text-color);
-  line-height: 21px;
+  line-height: 1.2;
 }
 
 @include mobile {
